--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="top_headlines">Top Headlines</string>
     <string name="test_text">Lunch Break angels swing above mmters passing Lunch Break angels swing above mmters passing</string>
     <string name="test_text2">2 Min read | 26 oct</string>
-
+    <string name="read_time">Min read</string>
 
 </resources>
