--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="test_text">Lunch Break angels swing above mmters passing Lunch Break angels swing above mmters passing</string>
     <string name="test_text2">2 Min read | 26 oct</string>
     <string name="read_time">Min read</string>
+    <string name="business">Business</string>
+    <string name="entertainment">Entertainment</string>
+    <string name="since">Since</string>
+    <string name="sports">Sports</string>
 
 </resources>
