setting Fragment Navigation and Arguments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="entertainment">Entertainment</string>
     <string name="since">Since</string>
     <string name="sports">Sports</string>
+    <string name="read_more">,Read more…</string>
+
 
 </resources>
